--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="member-box">
                         <img src="assets/img/team/person5.jpg" alt="Hans Muster">
-                        <h3 class="h4 mb-2 mt-2">Lukas Müller</h3>
+                        <h3 class="h4 mb-2 mt-2">Lukas TEST</h3>
                         <p class="text-white-50 mb-2">Montage und Produktion</p>
                         <p class="text-white-50 mb-1">
                             <i class="fas fa-phone"></i>
