added adress and fixed contact links

--- a/index.html
+++ b/index.html
@@ -16,13 +16,18 @@
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+        rel="stylesheet" type="text/css" />
     <!-- Third party plugin CSS-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"
+        rel="stylesheet" />
     <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+        crossorigin="" />
     <!-- Leaflet gesture handling-->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet-gesture-handling@1.2.1/dist/leaflet-gesture-handling.css" type="text/css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-gesture-handling@1.2.1/dist/leaflet-gesture-handling.css"
+        type="text/css">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
@@ -32,7 +37,9 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">Tischlerei Kritzl & Gassner OG</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Über uns</a></li>
@@ -53,7 +60,8 @@
                     <hr class="divider my-4" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!
+                    <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites
+                        using the Bootstrap framework! Just download a theme and start customizing, no strings attached!
                     </p>
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
                 </div>
@@ -67,7 +75,9 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">Ihr Wohntraum ist uns wichtig!</h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+                    <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and
+                        running in no time! Choose one of our open source, free to download, and easy to use themes! No
+                        strings attached!</p>
                     <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
                 </div>
             </div>
@@ -268,22 +278,41 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="mt-0">Kontaktieren Sie uns!</h2>
                     <hr class="divider my-4" />
-                    <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an
+                        email and we will get back to you as soon as possible!</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                    <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                    <div><a href="tel:+43 699 123 123 45">+43 699 123 123 45</a></div>
+                <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
+                    <a class="d-block js-scroll-trigger text-muted" href="#map-section">
+                        <i class="fas fa-map-marker-alt fa-3x mb-3 text-muted"></i>
+                        <div>
+
+                            Hauptstraße 24a<br />
+                            3372 Blindenmarkt
+
+                        </div>
+                    </a>
                 </div>
-                <div class="col-lg-4 mr-auto text-center">
-                    <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-                    <a class="d-block" href="mailto:office@kriga.at">office@kriga.at</a>
+                <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
+                    <a class="d-block text-muted" href="tel:+43 699 123 123 45">
+                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+                        <div>+43 699 123 123 45</div>
+                    </a>
                 </div>
-                <div class="col-lg-4 mr-auto text-center">
-                    <i class="fab fa-facebook fa-3x mb-3 text-muted"></i>
-                    <a class="d-block" href="https://www.facebook.com/Tischlerei-KritzlGassner-OG-1499374380371925/">Facebook</a>
+                <div class="col-lg-3 mr-auto text-center mb-5 mb-lg-0">
+                    <a class="d-block text-muted" href="mailto:office@kriga.at">
+                        <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+                        <div>office@kriga.at</div>
+                    </a>
                 </div>
+                <div class="col-lg-3 mr-auto text-center mb-5 mb-lg-0">
+                    <a class="d-block text-muted"
+                        href="https://www.facebook.com/Tischlerei-KritzlGassner-OG-1499374380371925/">
+                        <i class="fab fa-facebook fa-3x mb-3 text-muted"></i>
+                        <div>Facebook</div>
+                </div>
+                </a>
             </div>
         </div>
     </section>
@@ -313,7 +342,7 @@
                 <br> Firmengericht: Landesgericht Linz
                 <br> Behörde gem. ECG (E-Commerce Gesetz): Bezirkshauptmannschaft Perg/Melk
                 <br> Umsatzsteuer-Identifikationsnummer: ATU66943338
-                <br/><br>
+                <br /><br>
                 <script>
                     document.write(new Date().getFullYear());
                 </script>
@@ -328,7 +357,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <!-- Leaflet JS-->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+        crossorigin=""></script>
     <!-- Leaflet gesture handling-->
     <script src="https://unpkg.com/leaflet-gesture-handling@1.2.1/dist/leaflet-gesture-handling.min.js"></script>
     <!-- Core theme JS-->
