--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         <div>office@kriga.at</div>
                     </a>
                 </div>
-                <div class="col-lg-3 mr-auto text-center mb-5 mb-lg-0">
+                <div class="col-lg-3 mr-auto text-center">
                     <a class="d-block text-muted"
                         href="https://www.facebook.com/Tischlerei-KritzlGassner-OG-1499374380371925/">
                         <i class="fab fa-facebook fa-3x mb-3 text-muted"></i>
