changed kitchen layout

--- a/index.html
+++ b/index.html
@@ -182,8 +182,40 @@
     <section class="page-section bg-primary text-white" id="kitchen">
         <div class="container">
             <h2 class="text-center mt-0">Küchen</h2>
-            <hr class="divider light my-4">
+            <hr class="divider light my-4 mb-5">
+            <div class="row pb-5">
+                <div class="col-lg-5 col-md-12 text-center pb-5">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </div>
+                <div class="container-fluid p-0 col-lg-5 col-md-12 offset-lg-2">
+                    <div class="row">
+                        <div class="col-lg-6  col-sm-6 p-0">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
 
+                        </div>
+                        <div class="col-lg-6 col-sm-6 p-0">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+
+                        </div>
+                        <div class="col-lg-6  col-sm-6 p-0">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+
+                        </div>
+                        <div class="col-lg-6 col-sm-6 p-0">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                PARTNER
+            </div>
 
 
 
@@ -193,6 +225,7 @@
         <div class="container">
             <h2 class="text-center mt-0">Wohnzimmer</h2>
             <hr class="divider my-4">
+           
         </div>
     </section>
     <section class="page-section bg-info text-white" id="team">
@@ -287,7 +320,7 @@
                     <a class="d-block js-scroll-trigger text-muted" href="#map-section">
                         <i class="fas fa-map-marker-alt fa-3x mb-3 text-muted"></i>
                         <div>
-
+                            <b> Produktion & Schauraum</b><br />
                             Hauptstraße 24a<br />
                             3372 Blindenmarkt
 
