added portfolio sections

--- a/index.html
+++ b/index.html
@@ -141,49 +141,21 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
+                    <a class="portfolio-box js-scroll-trigger" href="#stairs">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Stiegen</div>
-                            <div class="project-name">Project Name</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
-                        <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
-                        <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-                        <div class="portfolio-box-caption p-3">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">Stiegen</div>
                         </div>
                     </a>
                 </div>
             </div>
         </div>
     </div>
-    <section class="page-section bg-primary text-white" id="kitchen">
+    <section class="page-section bg-info text-white" id="kitchen">
         <div class="container">
             <h2 class="text-center mt-0">Küchen</h2>
             <hr class="divider light my-4 mb-5">
-            <div class="row pb-5">
+            <div class="row pb-5 pt-5">
                 <div class="col-lg-5 col-md-12 text-center pb-5">
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                     labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
@@ -213,19 +185,138 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                PARTNER
+            <div class="container justify-content-center">
+                <h3 class="text-center mt-0 mb-5">Unsere Partner</h3>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                    </div>
+                    <div class="col-md-3">
+                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                    </div>
+                    <div class="col-md-3">
+                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                    </div>
+                    <div class="col-md-3">
+                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                    </div> 
+                </div>
             </div>
-
-
-
         </div>
     </section>
     <section class="page-section" id="livingroom">
         <div class="container">
-            <h2 class="text-center mt-0">Wohnzimmer</h2>
+            <h2 class="text-center">Wohnzimmer</h2>
             <hr class="divider my-4">
+            <div class="row pb-5 pt-5">
+                <div class="container-fluid p-0 col-lg-5 col-md-12 ">
+                    <div class="row">
+                        <div class="col-lg-6  col-sm-6 p-0">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+
+                        </div>
+                        <div class="col-lg-6 col-sm-6 p-0">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+
+                        </div>
+                        <div class="col-lg-6  col-sm-6 p-0">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+
+                        </div>
+                        <div class="col-lg-6 col-sm-6 p-0">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-md-12 text-center pb-5 offset-lg-2">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </div>
+                
+            </div>
+            <div class="container justify-content-center">
+                <h3 class="text-center mt-0 mb-5">Unsere Partner</h3>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                    </div>
+                    <div class="col-md-3">
+                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                    </div>
+                    <div class="col-md-3">
+                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                    </div>
+                    <div class="col-md-3">
+                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                    </div> 
+                </div>
+            </div>
            
+        </div>
+    </section>
+    <section class="page-section bg-primary text-white" id="stairs">
+        <div class="container">
+            <h2 class="text-center mt-0">Stiegen</h2>
+            <hr class="divider light my-4 mb-5">
+            <div class="row pb-5 pt-5">
+                <div class="col-lg-5 col-md-12 text-center pb-5">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </div>
+                <div class="container-fluid p-0 col-lg-5 col-md-12 offset-lg-2">
+                    <div class="row">
+                        <div class="col-lg-6  col-sm-6 p-0">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+
+                        </div>
+                        <div class="col-lg-6 col-sm-6 p-0">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+
+                        </div>
+                        <div class="col-lg-6  col-sm-6 p-0">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+
+                        </div>
+                        <div class="col-lg-6 col-sm-6 p-0">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container justify-content-center">
+                <h3 class="text-center mt-0 mb-5">Unsere Partner</h3>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                    </div>
+                    <div class="col-md-3">
+                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                    </div>
+                    <div class="col-md-3">
+                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                    </div>
+                    <div class="col-md-3">
+                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                    </div> 
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="page-section">
+        <div class="container text-center">
+            <i class="fas fa-5x fa-question mb-5 text-muted"></i>
+            <h2 class="mb-4">Haben Sie eine Idee? <br/>Wir unterstützen Sie bei der Verwirklichung!</h2>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#contact">Kontaktieren Sie uns!</a>
         </div>
     </section>
     <section class="page-section bg-info text-white" id="team">
