--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <hr class="divider my-4" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites
-                        using the Bootstrap framework! Just download a theme and start customizing, no strings attached!
+                    <p class="text-white-75 font-weight-light mb-5">Mühlviertel trifft Mostviertel, Präzision - Innovation - moderne Materialien - Handwerk
+                        "DAHOAM IS DAHOAM"
                     </p>
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
                 </div>
