--- a/index.html
+++ b/index.html
@@ -60,12 +60,10 @@
                     <hr class="divider my-4" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 font-weight-light mb-30">Mühlviertel trifft Mostviertel, Präzision - Innovation - moderne Materialien - Handwerk
-                        "DAHOAM IS DAHOAM"
-                    </p>
                     <h2 class="text-white mt-0">Mühlviertel trifft Mostviertel!</h2>
-                    <h2 class="text-white mt-0">Präzision - Innovation - moderne Materialien - Handwerk</h2>
+                    <h2 class="text-white mt-0">Präzision - Innovation - Handwerk</h2>
                     <h2 class="text-white mt-0">"DAHOAM IS DAHOAM"</h2>
+                    <hr class="divider my-4" />
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
                 </div>
             </div>
