--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 </div>
                 <div class="col-lg-8 align-self-baseline">
                     <h2 class="text-white mt-0">Mühlviertel trifft Mostviertel!</h2>
-                    <h2 class="text-white mt-0">Präzision - Innovation - Handwerk</h1>
+                    <h2 class="text-white mt-0">Präzision - Innovation - Handwerk</h2>
+                    <h2 class="text-white mt-0"></h2>
                     <h2 class="text-white mt-0">"DAHOAM IS DAHOAM"</h2>
-                    <hr class="divider my-4" />
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
                 </div>
             </div>
