--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
                 <div class="col-lg-10 align-self-end">
                     <img class="col-md-4 col-lg-8" src="assets/img/kriga_logo.png" alt="Logo">
                     <hr class="divider my-4" />
-                </div>
                 <div class="col-lg-8 align-self-baseline">
                     <h2 class="text-white mt-0">Mühlviertel trifft Mostviertel!</h2>
                     <h2 class="text-white mt-0">Präzision - Innovation - Handwerk</h2>
-                </div>
+            <div class="row pb-5 pt-5">
                     <h2 class="text-white mt-0">"DAHOAM IS DAHOAM"</h2>
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
                 </div>
