--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
                 <div class="col-lg-10 align-self-end">
                     <img class="col-md-4 col-lg-8" src="assets/img/kriga_logo.png" alt="Logo">
                     <hr class="divider my-4" />
-                <div class="col-lg-8 align-self-baseline">
+                    <div class="col-lg-8 align-self-baseline">
                     <h2 class="text-white mt-0">Mühlviertel trifft Mostviertel!</h2>
-                    <h2 class="text-white mt-0">Präzision - Innovation - Handwerk</h2>
+                    <h2 class="text-white mt-5">Präzision - Innovation - Handwerk</h2>
                     <h2 class="text-white mt-0">"DAHOAM IS DAHOAM"</h2>
+                    <hr class="divider my-4" />
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
                 </div>
             </div>
