--- a/index.html
+++ b/index.html
@@ -53,20 +53,21 @@
     </nav>
     <!-- Masthead-->
     <header class="masthead">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center justify-content-center text-center">
-                <div class="col-lg-10 align-self-end">
-                    <img class="col-md-4 col-lg-8" src="assets/img/kriga_logo.png" alt="Logo">
-                    <hr class="divider my-4" />
-                    <div class="col-lg-8 align-self-baseline">
-                    <h2 class="text-white mt-0">Mühlviertel trifft Mostviertel!</h2>
-                    <h2 class="text-white mt-5">Präzision - Innovation - Handwerk</h2>
-                    <h2 class="text-white mt-0">"DAHOAM IS DAHOAM"</h2>
-                    <hr class="divider my-4" />
-                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
-                </div>
-            </div>
-        </div>
+            <div class="container h-100">
+             <div class="row h-100 align-items-center justify-content-center text-center">
+                 <div class="col-lg-10 align-self-end">
+                     <img class="col-md-4 col-lg-8" src="assets/img/kriga_logo.png" alt="Logo">
+                     <hr class="divider my-4" />
+                  </div>
+                  <div class="col-lg-8 align-self-baseline">
+                      <p class="text-white-100 font-weight-light mb-15">Mühlviertel trifft Mostviertel, Präzision - Innovation - moderne Materialien - Handwerk
+                       <p class="text-white-75 font-weight-light mb-30">Mühlviertel trifft Mostviertel, Präzision - Innovation - moderne Materialien - Handwerk
+                         "DAHOAM IS DAHOAM"
+                     </p>
+                       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
+                  </div>
+             </div>
+         </div>
     </header>
     <!-- About-->
     <section class="page-section bg-primary" id="about">
