--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                      <hr class="divider my-4" />
                   </div>
                   <div class="col-lg-8 align-self-baseline">
-                      <p class="text-white-100 font-weight-light mb-15">Mühlviertel trifft Mostviertel, Präzision - Innovation - moderne Materialien - Handwerk
-                       <p class="text-white-75 font-weight-light mb-30">Mühlviertel trifft Mostviertel, Präzision - Innovation - moderne Materialien - Handwerk
-                         "DAHOAM IS DAHOAM"
+                      <p class="text-white-75 font-weight-light mb-15">Mühlviertel trifft Mostviertel
+                      <p class="text-white-75 font-weight-light mb-15">Präzision - Innovation - Handwerk
+                      <p class="text-white-75 font-weight-light mb-15">DAHOAM IS DAHOAM 
                      </p>
                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
                   </div>
