--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
              <div class="row h-100 align-items-center justify-content-center text-center">
                  <div class="col-lg-10 align-self-end">
                      <img class="col-md-4 col-lg-8" src="assets/img/kriga_logo.png" alt="Logo">
-                     <hr class="divider my-4" />
+                     ;<hr class="divider my-4" />
                   </div>
                   <div class="col-lg-8 align-self-baseline">
                       <p class="text-white-75 font-weight-light mb-15">Mühlviertel trifft Mostviertel
                       <p class="text-white-75 font-weight-light mb-15">Präzision - Innovation - Handwerk
                       <p class="text-white-75 font-weight-light mb-15">DAHOAM IS DAHOAM 
                      </p>
+                      <hr class="divider my-4" />
                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
                   </div>
              </div>
