--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <div class="col-lg-8 align-self-baseline">
                       <p class="text-white-75 font-weight-light mb-15">Mühlviertel trifft Mostviertel
                       <p class="text-white-75 font-weight-light mb-15">Präzision - Innovation - Handwerk
-                      <p class="text-white-75 font-weight-light mb-30">"DAHOAM IS DAHOAM" 
+                      <p class="text-white-75 font-weight-light mb-15">"DAHOAM IS DAHOAM" 
                      </p>
                       <hr class="divider my-4" />
                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
@@ -76,9 +76,8 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">Ihr Wohntraum ist uns wichtig!</h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and
-                        running in no time! Choose one of our open source, free to download, and easy to use themes! No
-                        strings attached!</p>
+                    <p class="text-white-50 mb-4">Mit langjähriger Erfahrung, einem hohen Maß an Kreativität und viel Fingerspitzengefühl verbinden unsere Einrichtungsberater modernste Technik
+                        und hochwertige Materialien mit durchdachten Designkonzepten. Überzeugen Sie sich selbst!</p>
                     <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
                 </div>
             </div>
