--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <hr class="divider light my-4" />
                     <p class="text-white-50 mb-4">Mit langjähriger Erfahrung, einem hohen Maß an Kreativität und viel Fingerspitzengefühl verbinden unsere Einrichtungsberater modernste Technik
                         und hochwertige Materialien mit durchdachten Designkonzepten. Überzeugen Sie sich selbst!</p>
-                    <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+                    <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Legen wir los!</a>
                 </div>
             </div>
         </div>
@@ -93,28 +93,28 @@
                     <div class="mt-5">
                         <i class="fas fa-4x fa-people-arrows text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Beratung</h3>
-                        <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                        <p class="text-muted mb-0">Sie haben einen persönlichen Ansprechpartner für das gesamte Projekt.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-ruler text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Planung</h3>
-                        <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                        <p class="text-muted mb-0">Wir nehmen uns ausführlich Zeit für Sie. Die Planung wird bei uns im Haus gemacht.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-tree text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Produktion</h3>
-                        <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+                        <p class="text-muted mb-0">Wir Produzieren mit modernsten Maschinen alles individuel nach Ihren Wünschen.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-people-carry text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Montage</h3>
-                        <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                        <p class="text-muted mb-0">Wir arbeiten mit eigenem Fachpersonal!</p>
                     </div>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                     <a class="portfolio-box js-scroll-trigger" href="#livingroom">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
                         <div class="portfolio-box-caption">
-                            <div class="project-name">Wohnzimmer</div>
+                            <div class="project-name">Individuelle Möbel</div>
                         </div>
                     </a>
                 </div>
@@ -144,7 +144,7 @@
                     <a class="portfolio-box js-scroll-trigger" href="#stairs">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
                         <div class="portfolio-box-caption">
-                            <div class="project-name">Stiegen</div>
+                            <div class="project-name">Türen - Böden- Stiegen</div>
                         </div>
                     </a>
                 </div>
@@ -158,11 +158,12 @@
             <div class="row pb-5 pt-5">
                 <div class="col-lg-5 col-md-12 text-center pb-5">
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Das Tätigkeitsfeld erstreckt sich über nahezu alle Bereiche des Tischlerhandwerks, sei es die individuelle Gestaltung von Esszimmern, 
+                    Schlafzimmern oder Wohnzimmern, der Fertigung von Türen und Stiegen oder der Planung von Küchen. 
+                    Die Materialvielfalt reicht dabei von traditioneller Massivholzverarbeitung über Furniertechnik bis zu modernsten 
+                    Platten und Oberflächengestaltungen mit Glaselementen und LED Beleuchtung. Selbstverständlich gibt es auch die 
+                    Zusammenarbeit mit namhaften österreichischen Produzenten, deren Türen, Böden, Küchen, Esszimmer, Jugendzimmer...
+                    von uns fachgerecht montiert werden.                    
                 </div>
                 <div class="container-fluid p-0 col-lg-5 col-md-12 offset-lg-2">
                     <div class="row">
