--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
             <hr class="divider light my-4 mb-5">
             <div class="row pb-5 pt-5">
                 <div class="col-lg-5 col-md-12 text-center pb-5">
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                     Das Tätigkeitsfeld erstreckt sich über nahezu alle Bereiche des Tischlerhandwerks, sei es die individuelle Gestaltung von Esszimmern, 
                     Schlafzimmern oder Wohnzimmern, der Fertigung von Türen und Stiegen oder der Planung von Küchen. 
                     Die Materialvielfalt reicht dabei von traditioneller Massivholzverarbeitung über Furniertechnik bis zu modernsten 
@@ -207,7 +206,7 @@
     </section>
     <section class="page-section" id="livingroom">
         <div class="container">
-            <h2 class="text-center">Wohnzimmer</h2>
+            <h2 class="text-center">Individuelle Möbel</h2>
             <hr class="divider my-4">
             <div class="row pb-5 pt-5">
                 <div class="container-fluid p-0 col-lg-5 col-md-12 ">
@@ -231,12 +230,12 @@
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-12 text-center pb-5 offset-lg-2">
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Gesamtkonzepte in detaillierter Abstimmung der einzelnen Räume. Wohnen und Arbeiten im privaten Bereich; 
+                    öffentliche Projekte wie Schulen, Kindergärten; Objekteinrichtungen; Studios; Verkaufsräume; 
+                    Küchen und Essbereiche, Wohnzimmer, Schlafzimmer, Badezimmer, Jugend- und Kinderzimmer, Innengestaltung von Wintergärten,
+                    Vorräume, Arbeitszimmer, Stauräume, Objekteinrichtungen, Innentüren, Stilgetreue Umsetzungen; moderne Trends und aktuelle Designs;
+                    edler Landhausstil, Kombination von Materialien wie Stein, Metall, Stoffen mit edlen Hölzern; effektive Lichtgestaltungen;
+                    Handel mit sämtlichen zusätzlich benötigten Ressourcen; Einbaugeräte; Sitzmöbel; Sessel; Stoffe; Vorhänge; Accessoires;
                 </div>
                 
             </div>
