--- a/index.html
+++ b/index.html
@@ -261,16 +261,13 @@
     </section>
     <section class="page-section bg-primary text-white" id="stairs">
         <div class="container">
-            <h2 class="text-center mt-0">Stiegen</h2>
+            <h2 class="text-center mt-0">Türen - Böden- Stiegen</h2>
             <hr class="divider light my-4 mb-5">
             <div class="row pb-5 pt-5">
-                <div class="col-lg-5 col-md-12 text-center pb-5">
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                <div class="col-lg-5 col-md-12 text-center pb-5">                    
+                    Damit Ihr persönlicher Wohntraum zu einem stimmigen Gesamtkonzept wird, unterstützen wir Sie auch 
+                    gerne bei der optimalen Farbauswahl und liefern Inspirationen zur passenden Boden- und Wandgestaltung. 
+                    Mit einem maßgeschneiderten Beleuchtungskonzept komplettieren wir Ihren Wohntraum.
                 </div>
                 <div class="container-fluid p-0 col-lg-5 col-md-12 offset-lg-2">
                     <div class="row">
