--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box js-scroll-trigger" href="#livingroom">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/_22A4636.JPG" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-name">Individuelle Möbel</div>
                         </div>
