--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box js-scroll-trigger" href="#kitchen">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/Dan_Kueche.jpg" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/Küche.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-name">Küchen</div>
                         </div>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box js-scroll-trigger" href="#livingroom">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/_22A4636.JPG" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/Individuelle_Möbel.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-name">Individuelle Möbel</div>
                         </div>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box js-scroll-trigger" href="#stairs">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/1400.jpg" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/Stiege.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-name">Türen - Böden- Stiegen</div>
                         </div>
