--- a/index.html
+++ b/index.html
@@ -326,10 +326,10 @@
                     <div class="member-box">
                         <img src="assets/img/team/person1.jpg" alt="Michael Kritzl">
                         <h3 class="h4 mb-2 mt-2">Michael Kritzl</h3>
-                        <p class="text-white-50 mb-2">Verkauf</p>
+                        <p class="text-white-50 mb-2">Verkauf/Produktion</p>
                         <p class="text-white-50 mb-1">
                             <i class="fas fa-phone"></i>
-                            <a href="tel:+43 699 123 123 45">+43 699 123 123 45</a>
+                            <a href="tel:+43 660 40 471 51">+43 660 40 471 51</a>
                         </p>
                         <p class="text-white-50">
                             <i class="fas fa-envelope"></i>
@@ -342,10 +342,10 @@
                     <div class="member-box">
                         <img src="assets/img/team/person2.jpg" alt="Friedrich Gassner">
                         <h3 class="h4 mb-2 mt-2">Friedrich Gassner</h3>
-                        <p class="text-white-50 mb-2">Produktion</p>
+                        <p class="text-white-50 mb-2">Verkauf/Produktion</p>
                         <p class="text-white-50 mb-1">
                             <i class="fas fa-phone"></i>
-                            <a href="tel:+43 699 123 123 45">+43 699 123 123 45</a>
+                            <a href="tel:+43 680 14 138 88">+43 680 14 138 88</a>
                         </p>
                         <p class="text-white-50">
                             <i class="fas fa-envelope"></i>
@@ -372,8 +372,8 @@
 
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="member-box">
-                        <img src="assets/img/team/person5.jpg" alt="Hans Muster">
-                        <h3 class="h4 mb-2 mt-2">Lukas TEST</h3>
+                        <img src="assets/img/team/person5.jpg" alt="Lukas Hausleithner">
+                        <h3 class="h4 mb-2 mt-2">Lukas Hausleithner</h3>
                         <p class="text-white-50 mb-2">Montage und Produktion</p>
                         <p class="text-white-50 mb-1">
                             <i class="fas fa-phone"></i>
