--- a/index.html
+++ b/index.html
@@ -356,6 +356,22 @@
 
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="member-box">
+                        <img src="assets/img/team/person2.jpg" alt="Friedrich Gassner">
+                        <h3 class="h4 mb-2 mt-2">Friedrich Gassner</h3>
+                        <p class="text-white-50 mb-2">Verkauf/Produktion</p>
+                        <p class="text-white-50 mb-1">
+                            <i class="fas fa-phone"></i>
+                            <a href="tel:+43 680 14 138 88">+43 680 14 138 88</a>
+                        </p>
+                        <p class="text-white-50">
+                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:friedrich.gassner@kriga.at">friedrich.gassner@kriga.at</a>
+                        </p>
+                    </div>
+                </div>
+                
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="member-box">
                         <img src="assets/img/team/person3.jpg" alt="Michael Plank">
                         <h3 class="h4 mb-2 mt-2">Michael Plank</h3>
                         <p class="text-white-50 mb-2">CAD Konstruktion und Planung</p>
