--- a/index.html
+++ b/index.html
@@ -353,43 +353,6 @@
                         </p>
                     </div>
                 </div>
-
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="member-box">
-                        <img src="assets/img/team/person2.jpg" alt="Friedrich Gassner">
-                        <h3 class="h4 mb-2 mt-2">Friedrich Gassner</h3>
-                        <p class="text-white-50 mb-2">Verkauf/Produktion</p>
-                        <p class="text-white-50 mb-1">
-                            <i class="fas fa-phone"></i>
-                            <a href="tel:+43 680 14 138 88">+43 680 14 138 88</a>
-                        </p>
-                        <p class="text-white-50">
-                            <i class="fas fa-envelope"></i>
-                            <a href="mailto:friedrich.gassner@kriga.at">friedrich.gassner@kriga.at</a>
-                        </p>
-                    </div>
-                </div>
-                
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="member-box">
-                        <img src="assets/img/team/person3.jpg" alt="Michael Plank">
-                        <h3 class="h4 mb-2 mt-2">Michael Plank</h3>
-                        <p class="text-white-50 mb-2">CAD Konstruktion und Planung</p>
-                        <p class="text-white-50">
-                            <i class="fas fa-envelope"></i>
-                            <a href="mailto:michael.plank@kriga.at">michael.plank@kriga.at</a>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="member-box">
-                        <img src="assets/img/team/person5.jpg" alt="Lukas Hausleithner">
-                        <h3 class="h4 mb-2 mt-2">Lukas Hausleithner</h3>
-                        <p class="text-white-50 mb-2">Montage und Produktion</p>
-                    </div>
-                </div>
-
             </div>
         </div>
     </section>
@@ -403,49 +366,9 @@
 
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="member-box">
-                        <img src="assets/img/team/person1.jpg" alt="Michael Kritzl">
-                        <h3 class="h4 mb-2 mt-2">Michael Kritzl</h3>
-                        <p class="text-white-50 mb-2">Verkauf/Produktion</p>
-                        <p class="text-white-50 mb-1">
-                            <i class="fas fa-phone"></i>
-                            <a href="tel:+43 660 40 471 51">+43 660 40 471 51</a>
-                        </p>
-                        <p class="text-white-50">
-                            <i class="fas fa-envelope"></i>
-                            <a href="mailto:michael.kritzl@kriga.at">michael.kritzl@kriga.at</a>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="member-box">
-                        <img src="assets/img/team/person2.jpg" alt="Friedrich Gassner">
+                        <img src="assets/img/team/person2.jpg" alt="Eva Gamperl">
                         <h3 class="h4 mb-2 mt-2">Friedrich Gassner</h3>
-                        <p class="text-white-50 mb-2">Verkauf/Produktion</p>
-                        <p class="text-white-50 mb-1">
-                            <i class="fas fa-phone"></i>
-                            <a href="tel:+43 680 14 138 88">+43 680 14 138 88</a>
-                        </p>
-                        <p class="text-white-50">
-                            <i class="fas fa-envelope"></i>
-                            <a href="mailto:friedrich.gassner@kriga.at">friedrich.gassner@kriga.at</a>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="member-box">
-                        <img src="assets/img/team/person2.jpg" alt="Friedrich Gassner">
-                        <h3 class="h4 mb-2 mt-2">Friedrich Gassner</h3>
-                        <p class="text-white-50 mb-2">Verkauf/Produktion</p>
-                        <p class="text-white-50 mb-1">
-                            <i class="fas fa-phone"></i>
-                            <a href="tel:+43 680 14 138 88">+43 680 14 138 88</a>
-                        </p>
-                        <p class="text-white-50">
-                            <i class="fas fa-envelope"></i>
-                            <a href="mailto:friedrich.gassner@kriga.at">friedrich.gassner@kriga.at</a>
-                        </p>
+                        <p class="text-white-50 mb-2">Buchhaltung</p>
                     </div>
                 </div>
                 
