--- a/index.html
+++ b/index.html
@@ -353,8 +353,6 @@
                         </p>             
         </div>
     </section>
-
-    </section>
     <section class="page-section bg-info text-white" id="team">
         <div class="container">
             <div class="row justify-content-center">
@@ -362,7 +360,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="member-box">
                         <img src="assets/img/team/person2.jpg" alt="Eva Gamperl">
-                        <h3 class="h4 mb-2 mt-2">Friedrich Gassner</h3>
+                        <h3 class="h4 mb-2 mt-2">Eva Gamperlr</h3>
                         <p class="text-white-50 mb-2">Buchhaltung</p>
                     </div>
                 </div>
