--- a/index.html
+++ b/index.html
@@ -397,8 +397,9 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="mt-0">Kontaktieren Sie uns!</h2>
                     <hr class="divider my-4" />
-                    <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an
-                        email and we will get back to you as soon as possible!</p>
+                    <p class="text-muted mb-5">Der Firmenstandort ist Waldhausen. Da jedoch kurz nach der Gründung in Blindenmarkt passende Räumlichkeiten
+                        für die Fertigung gefunden und angemietet wurden, ist der Betrieb nun an zwei Standorten, Bürobetrieb in Waldhausen und Produktion
+                        in Blindenmarkt, angesiedelt.</p>
                 </div>
             </div>
             <div class="row">
