--- a/index.html
+++ b/index.html
@@ -413,6 +413,16 @@
 
                         </div>
                     </a>
+                <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
+                    <a class="d-block js-scroll-trigger text-muted" href="#map-section">
+                        <i class="fas fa-map-marker-alt fa-3x mb-3 text-muted"></i>
+                        <div>
+                            <b> Produktion & Schauraum</b><br />
+                            Hauptstraße 24a<br />
+                            3372 Blindenmarkt
+
+                        </div>
+                    </a>                    
                 </div>
                 <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
                     <a class="d-block text-muted" href="tel:+43 699 123 123 45">
